--- a/services/booking/requirements.txt
+++ b/services/booking/requirements.txt
@@ -1,9 +1,8 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
-python-dotenv==1.0.0
-httpx==0.25.2
-pytest==7.4.3
-pytest-cov==4.1.0
-fastapi-testclient==0.1.1
+fastapi
+uvicorn[standard]
+SQLAlchemy
+psycopg2-binary
+pydantic
+redis
+aio_pika
+httpx
